--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 title:       Nguyen Van Dung
 email:       dungnv2410@gmail.com
 author:      Nguyen Van Dung
-description: "Doanguyen homepage."
+description: "doa nguyen homepage"
 baseurl:     ""
 url:         "http://doanguyen.github.io"
 
 # Google analytics
-google_analytics:
+google_analytics:	UA-37376311-2
 
 # Optional features
 animated:           false
@@ -20,22 +20,22 @@ show_social_icons:  false
 disqus_shortname: doanguyen
 
 # Social icons
-github_username:
-stackoverflow_id:
-twitter_username:
-google_plus_id:
+github_username:	doanguyen
+stackoverflow_id:	
+twitter_username:	doanguyen
+google_plus_id:	
 linkedin_username:
 angellist_username:
-medium_id:
+medium_id:	
 bitcoin_url:
 paypal_url:
 flattr_button:
 
 # Post sharing icons
-show_sharing_icons: true
+show_sharing_icons: false
 share_text: 'Share this post!'
 # Change to 'true' to enable individual icons
-share_facebook: true
+share_facebook: false
 share_twitter: false
 share_googleplus: false
 share_linkedin: false
