--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:       Nguyen Van Dung
+title:       Homepage | doanguyen | Nguyen Van Dung
 email:       dungnv2410@gmail.com
 author:      Nguyen Van Dung
 description: "doa nguyen homepage"
