--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title:       Homepage | doanguyen | Nguyen Van Dung
 email:       dungnv2410@gmail.com
 author:      Nguyen Van Dung
-description: "doa nguyen homepage"
+description: "Nguyen Van Dung homepage"
 baseurl:     ""
 url:         "http://doanguyen.github.io"
 
