--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title:       Homepage | doanguyen | Nguyen Van Dung
+title:       Nguyen Van Dung, from Science with Love
 email:       dungnv2410@gmail.com
 author:      Nguyen Van Dung
 description: "Nguyen Van Dung homepage"
@@ -10,7 +10,7 @@ url:         "http://doanguyen.github.io"
 google_analytics:	UA-37376311-2
 
 # Optional features
-animated:           false
+animated:           true
 show_related_posts: false
 show_post_footers:  false
 show_social_icons:  false
@@ -22,7 +22,7 @@ disqus_shortname: doanguyen
 # Social icons
 github_username:	doanguyen
 stackoverflow_id:	
-twitter_username:	doanguyen
+twitter_username:	
 google_plus_id:	
 linkedin_username:
 angellist_username:
@@ -56,3 +56,4 @@ sass:
   compressed: true
 gems:
   - jekyll-sitemap
+  - jekyll-paginate
