--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,11 @@ url:         "http://doanguyen.github.io"
 # Google analytics
 google_analytics:	UA-37376311-2
 
+# Mathjax
+mathjax: true
+
 # Optional features
-animated:           true
+animated:           false
 show_related_posts: false
 show_post_footers:  false
 show_social_icons:  false
@@ -21,12 +24,12 @@ disqus_shortname: doanguyen
 
 # Social icons
 github_username:	doanguyen
-stackoverflow_id:	
-twitter_username:	
-google_plus_id:	
+stackoverflow_id:
+twitter_username:
+google_plus_id:
 linkedin_username:
 angellist_username:
-medium_id:	
+medium_id:
 bitcoin_url:
 paypal_url:
 flattr_button:
