--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ permalink:    pretty
 paginate:     20
 paginate_path:	archives/page-:num
 sass:
-  compressed: true
+  style: compressed
 gems:
   - jekyll-sitemap
   - jekyll-paginate
